--- a/index.html
+++ b/index.html
@@ -22,16 +22,23 @@
                             <label for="">Star</label>
                         </div>
                         <div class="dir">
-                            <select name="" id=""></select>
+                            <select class="select-estiloso" name="" id=""></select>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="corpo">
-
+                <p>The metada layer for baking AWS device software to Embedded Linux distributions built by the <br>Yocto Project build system.</p>
             </div>
             <div class="rodape">
-
+                <div class="usuario">
+                    <div class="circulo"></div>
+                    <p>BitBake</p>
+                </div>
+                <div class="like">
+                    <img src="" alt="">
+                    <p>85</p>
+                </div>
             </div>
         </div>
     </div>
